# template_langgraph_mcp_agent

./: .cursorignore  .gitignore  LICENSE  README.md  ci.md  cookiecutter.json  pyproject.toml  tox.ini
.cursor/rules/: tdd-langgraph.mdc
.github/workflows/: ci.yml
_ai_workflows/: README.md  README_fr.md
_ai_workflows/factory/new_instructions/: run_en.md  run_fr.md
_ai_workflows/factory/new_instructions/instructions/: instructions_v1.0.0.md  instructions_v1.0.0_fr.md
_ai_workflows/factory/new_workflow/: run_en.md  run_fr.md
_ai_workflows/text_based/: README.md
_ai_workflows_packages/ai_workflows/: README.md
_ai_workflows_tutorials/: README.md  README_fr.md
_ai_workflows_tutorials/2_ai_workflows/_workflows/factory/new_workflow/instructions/: instructions_v1.0.0.md
_ai_workflows_tutorials/3_ai_workflows_as_code/: tutorial.md  tutorial_fr.md
_ai_workflows_tutorials/3_ai_workflows_as_code/_ai_workflows/code_based/faq_analysis/: README.md  README_fr.md
_ai_workflows_tutorials/3_ai_workflows_as_code/_ai_workflows/code_based/faq_analysis/_code/_output/_data/faq_analysis/collection/faq_analysis/: storage.sqlite
_ai_workflows_tutorials/3_ai_workflows_as_code/_ai_workflows/code_based/faq_analysis/_text/instructions/: instructions_v1.0.0_fr.md
_ai_workflows_tutorials/3_ai_workflows_as_code/_ai_workflows_packages/ai_workflows/: README.md  README_fr.md  pyproject.toml
_ai_workflows_tutorials/3_ai_workflows_as_code/_ai_workflows_packages/ai_workflows/src/ai_workflows/: __init__.py
scripts/: bootstrap.py
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  README.md  a2a_client.py  a2a_helper.py  pyproject.toml  runtime_graph.py
{{cookiecutter.project_slug}}/.cursor/rules/: best-practices.mdc
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py  runtime_graph.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/workflows/code_based/faq_analysis/: README.md
{{cookiecutter.project_slug}}/tests/: test_a2a_client.py
{{cookiecutter.project_slug}}/tests/tests/specs/: echo.md
{{cookiecutter.project_slug}}/workflows/: README.md
{{cookiecutter.project_slug}}/workflows/code_based/faq_analysis/_code/: run.py
{{cookiecutter.project_slug}}/workflows/code_based/faq_analysis/_text/instructions/: instructions_v1.0.0.md
{{cookiecutter.project_slug}}/workflows/factory/new_instructions/: run.md
{{cookiecutter.project_slug}}/workflows/factory/new_workflow/instructions/: instructions_v1.0.0.md
