[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "LangGraph + MCP agent template with TDD first."
authors = [{ name = "{{cookiecutter.author}}"}]
requires-python = ">=3.10"

dependencies = [
  "langgraph>=0.0.43",                 # graph runtime 
  "langgraph-mcp-adapters>=0.1.2",     # MCP→LangGraph bridge 
  "mcp-client>=0.4.4",                 # talks to MCP servers 
  "pytest", "pytest-asyncio",          # TDD harness 
  "ruff", "black"                      # code-quality tools
]

